# maai-agents-swarm

./: .env  .gitignore  CLAUDE.md  README.md  bootstrap.bat  bootstrap.sh  docker-compose.yml  pyproject.toml  update.bat  update.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-infrastructure-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-core-api-and-end-to-end-chat/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
clients/default/: client.env  client.env.example  models.yaml  tools.yaml
config/litellm/: proxy_config.yaml
src/core_api/: Dockerfile  logging_config.py  main.py  pyproject.toml
src/core_api/agents/: freeform_crew.py  rag_crew.py
src/core_api/agents/config/: agents.yaml  tasks.yaml
src/core_api/rag/: gpu_lock.py  pipeline.py
src/core_api/routers/: chat.py  ingest.py
src/core_api/skills/: __init__.py  executor.py  matcher.py  models.py  registry.py  tool_registry.py
src/core_api/tools/: call_ingest_tool.py  echo_tool.py  job_status_tool.py  qdrant_search_tool.py
src/core_api/workers/: ingest_worker.py
src/docproc/: Dockerfile  logging_config.py  main.py  pyproject.toml
src/pipelines/: maai_pipe.py
tests/phase04/: conftest.py  test_chat_upload.py  test_client_isolation.py  test_docling_pipeline.py  test_gpu_scheduling.py  test_ocr_processing.py  test_qdrant_indexing.py  test_rag_query.py
tests/phase1/: conftest.py  test_client_config.py  test_gpu_active.py  test_litellm_routing.py  test_local_only.py  test_networking.py  test_stack_startup.py
tests/phase2/: conftest.py  test_core_api.py  test_crew_config.py  test_docker_wiring.py  test_pipeline.py  test_webui_accessible.py
tests/phase3/: conftest.py  test_chat_router.py  test_executor.py  test_matcher.py  test_skill_registry.py  test_tool_registry.py
(+34 files in other folders)
