[project]
name = "maai-core-api"
version = "0.1.0"
description = "MAAI Agent Platform — Core API service"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "crewai[litellm]>=1.13.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "arq>=0.27.0",
    "redis>=5.0",
    "qdrant-client>=1.13.0",
    "llama-index-core>=0.14.20",
    "llama-index-vector-stores-qdrant",
    "llama-index-embeddings-ollama",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
