[project]
name = "maai-docproc"
version = "0.1.0"
description = "MAAI Document Processing Service — Docling + EasyOCR"
requires-python = ">=3.11,<3.12"
dependencies = [
    "docling>=2.85.0",
    "easyocr",
    "opencv-python-headless",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
